data/forge_javadoc/1.7.10/raw/net/minecraft/world/gen/structure/StructureVillagePieces.House1.md
---
title: "StructureVillagePieces.House1"
description: "public static class StructureVillagePieces.House1 extends StructureVillagePieces.Village"
package: "net/minecraft/world/gen/structure"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/world/gen/structure/StructureVillagePieces.House1.html"
sourceType: javadoc
---

# StructureVillagePieces.House1

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureVillagePieces.Village → net.minecraft.world.gen.structure.StructureVillagePieces.House1

## Class signature

```java
public static class StructureVillagePieces.House1 extends StructureVillagePieces.Village
```

## Methods

- `boolean addComponentParts(World p_74875_1_, java.util.Random p_74875_2_, StructureBoundingBox p_74875_3_)`
- `static StructureVillagePieces.House1 func_74898_a(StructureVillagePieces.Start p_74898_0_, java.util.List p_74898_1_, java.util.Random p_74898_2_, int p_74898_3_, int p_74898_4_, int p_74898_5_, int p_74898_6_, int p_74898_7_)`
- `protected int getVillagerType(int p_74888_1_)`

## Fields

- `House1`
- `House1`
